--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,21 @@
 
 	Theme Name: avana LLC
 
-	Template URI: 
+	Template URI:
 
-	Description: 
+	Description:
 
 	Author:
 
-	Author URI: 
+	Author URI:
 
-	License: 
+	License:
 
 	License URI:
 
 	Version: 1.0
 
-	
+
 
 	1. Body style
 
@@ -28,7 +28,7 @@
 
 	5. About
 
-	
+
 
 */
 
@@ -400,4 +400,5 @@ article[role="pge-title-content"].contact-header p a:hover{color:#fb5353; text-d
 
 .commentys-form input[type="button"]:hover{ background-color:#ff5c5c}
 
-img { height: auto; }
+/*img { height: auto; }
+*/
