--- a/css/style.css
+++ b/css/style.css
@@ -400,5 +400,5 @@ article[role="pge-title-content"].contact-header p a:hover{color:#fb5353; text-d
 
 .commentys-form input[type="button"]:hover{ background-color:#ff5c5c}
 
-/*img { height: auto; }
-*/
+img { height: auto; width : auto;}
+
